fixed home page spacing

--- a/project_root/public/css/global_css/global.css
+++ b/project_root/public/css/global_css/global.css
@@ -17,7 +17,6 @@ html, body {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: 20px;
     text-decoration: none;
         /* Remove underline */
 }
