--- a/project_root/public/css/home_css/style.css
+++ b/project_root/public/css/home_css/style.css
@@ -6,13 +6,9 @@
 #content_container {
     display: flex;
     flex-direction: column;
-    /* Stack items vertically */
     justify-content: flex-start;
-    /* Align items at the top */
     align-items: center;
-    /* Center items horizontally */
     width: 100%;
-    /* Add padding to create space from the top */
 }
 
 .title_header {
@@ -25,15 +21,11 @@
     letter-spacing: 0px;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
     text-align: center;
-    /* Ensure text is centered */
     width: 100%;
-    /* Ensure full width */
     white-space: normal;
-    /* Allow text to wrap naturally */
     line-height: 1.4;
-    /* Optional: Adjust line spacing between the two lines */
     word-wrap: break-word;
-    /* Ensure words break if necessary */
+    margin-bottom: 5vh;
 }
 
 @media (max-width: 768px) {
